# memfs

./: .gitmodules  CMakeLists.txt  README.md
include/: memfs_compat.h
include/memfs/: memfs.h
src/: Fuse.cpp  Fuse.h  memfs.cpp
src/test/: test_memfs.cpp
